# reseollio

./: .dockerignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  DEBUGGING_GUIDE.md  DEBUG_QUICK_START.md  Dockerfile.loadtest  EXAMPLES.md  IMPLEMENTATION_STATUS.md  README.md  RELEASING.md  docker-compose.loadtest.yml  docker-compose.yml  jobs.json  launch.json  package-lock.json  package.json  reseolio.db-shm  setup-brain.ps1
.github/workflows/: publish.yml
core/: Cargo.toml  build.rs  reseolio.db-shm
core/src/: error.rs  main.rs
core/src/metrics/: mod.rs
core/src/scheduler/: cron.rs  mod.rs  registry.rs
core/src/server/: mod.rs  reseolio.rs  service.rs
core/src/storage/: mod.rs  models.rs  postgres.rs  sqlite.rs
dashboard/: package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/jobs/: route.ts
dashboard/src/app/api/jobs/[id]/: route.ts
dashboard/src/app/api/jobs/[id]/retry/: route.ts
dashboard/src/app/api/schedules/: route.ts
dashboard/src/app/api/schedules/[id]/: route.ts
dashboard/src/app/api/schedules/[id]/pause/: route.ts
dashboard/src/app/api/schedules/[id]/resume/: route.ts
dashboard/src/app/api/stats/: route.ts
dashboard/src/components/: job-detail-modal.tsx  schedule-detail-modal.tsx  schedule-status-badge.tsx  stats-card.tsx  status-badge.tsx
dashboard/src/lib/: api.ts  dummy-data.ts  grpc-client.ts
examples/: email-sending.ts
proto/: reseolio.proto
sdks/node/: README.md  debug_output.txt  debug_output_2.txt  package.json  reseolio.db-shm  test-debug.ts  tsconfig.json  vitest.config.ts
sdks/node/examples/: schedule-advanced.ts  schedule-complex-patterns.ts  schedule-convenience-methods.ts  schedule-daily-report.ts
sdks/node/src/: client.ts  durable.ts  index.ts  job.ts  schedule.ts  tracing.ts  types.ts
sdks/node/tests/: debug-client.ts  debug-subscription.ts  e2e-idempotency-scoping.ts  e2e-idempotency.ts  reseolio.test.ts  test-debug.mjs  test-debug.ts  test-idempotency.ts  test-namespace.ts  type-test-idempotency.ts
sdks/node/tests/e2e/: 01-basic-job-lifecycle.ts  02-retry-and-failure-handling.ts  03-idempotency-deduplication.ts  04-function-namespacing.ts  05-events-and-observability.ts  06-workflow-patterns.ts  07-timeout-handling.ts  08-latency-benchmarks.ts  09-chained-durables.ts  10-fanout-parallel.ts  11-result-caching.ts  12-schedule-lifecycle.ts  13-schedule-triggering.ts  14-schedule-edge-cases.ts  15-schedule-prescheduling.ts  16-schedule-timezone.ts  17-schedule-convenience.ts  18-schedule-idempotency.ts  19-schedule-handler-options.ts  20-function-centric-schedule.ts  21-schedule-arguments.ts  README.md  run-all.ts
sdks/node/tests/load/: 01-throughput.ts  02-multi-worker.ts  03-retry-storm.ts  04-idempotency-stress.ts  05-long-running-jobs.ts  06-burst-traffic.ts  07-chained-workflows.ts  08-schedule-throughput.ts  09-schedule-triggering.ts  10-schedule-idempotency.ts  11-schedule-updates.ts  12-schedule-mixed-workload.ts  LOAD_TESTING_SUMMARY.md  README.md  preload-tracing.ts  run-all.ts  worker.ts
sdks/rust/: Cargo.toml  README.md  RUST_SDK_GUIDE.md  build.rs
sdks/rust/examples/: basic_usage.rs  retry_options.rs  scheduling.rs
sdks/rust/src/: client.rs  durable.rs  error.rs  job.rs  lib.rs  schedule.rs  tracing_support.rs  types.rs
sdks/rust/src/proto/: mod.rs  reseolio.rs
sdks/rust/tests/: client_test.rs  types_test.rs
tests/: run-load-tests.ps1
tests/load/: 01-throughput.ts  02-multi-worker.ts  03-retry-storm.ts  04-idempotency-stress.ts  05-long-running-jobs.ts  06-burst-traffic.ts  07-chained-workflows.ts  README.md  preload-tracing.ts  worker.ts
