[package]
name = "reseolio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The SQLite of Durable Execution - Core Engine"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
redis = []

[[bin]]
name = "reseolio"
path = "src/main.rs"
