[package]
name = "reseolio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Durable Execution for Modern Backends - Core Engine"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
    "json",
], optional = true }
http = "0.2"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "request-id", "util"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry-http = "0.10"

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["sqlite"]
sqlite = []
postgres = ["dep:sqlx"]
redis = []

[[bin]]
name = "reseolio"
path = "src/main.rs"
